# chatoyant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  JAVASCRIPT.md  Makefile  NPM_PACKAGE.md  OCAML.md  README.md  SECURITY.md  biome.json  chatoyant.opam  dune-project  package-lock.json  package.json  tsconfig.json  tsup.config.ts  typedoc-custom.css  typedoc.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  opam-release.yml  publish.yml
doc/: odoc-brand.css
js/: chatoyant_internal.ml  chatoyant_js.d.ts  chatoyant_js.ml  dune
lib/chatoyant/: chatoyant.ml  chatoyant.mli  dune
lib/core/: chat.ml  chatoyant_core.ml  chatoyant_core.mli  dune  generator.ml  generator.mli  message.ml  message.mli  options.ml  options.mli  preset.ml  preset.mli  result.ml  result.mli  session.ml  session.mli  shortcuts.ml  stream.ml  stream.mli  tool.ml  tool.mli
lib/eio/: chatoyant_native.ml  chatoyant_native.mli  dune
lib/ppx/: dune  ppx_chatoyant.ml
lib/provider/: anthropic.ml  anthropic.mli  chatoyant_provider.ml  chatoyant_provider.mli  dune  local.ml  local.mli  openai.ml  openai.mli  openai_compatible.ml  openai_compatible.mli  openai_decode.ml  openai_decode.mli  openai_stream.ml  openai_stream.mli  openrouter.ml  openrouter.mli  provider.ml  provider.mli  registry.ml  registry.mli  usage.ml  xai.ml  xai.mli
lib/runtime/: chatoyant_runtime.ml  chatoyant_runtime.mli  dune  effect.ml  effect.mli  json.ml  json.mli  sse.ml  sse.mli
lib/schema/: chatoyant_schema.ml  chatoyant_schema.mli  codec.ml  codec.mli  json_schema.mli  json_schema_ast.ml  json_schema_ast.mli  json_schema_output.ml  json_schema_output.mli  json_schema_pointer.ml  json_schema_pointer.mli  json_schema_project.ml  json_schema_project.mli  json_schema_regex.ml  json_schema_regex.mli  json_schema_resolver.ml  json_schema_resolver.mli  json_schema_validator.ml  json_schema_validator.mli  schema.ml  schema.mli  value.ml  value.mli
lib/tokens/: chunking.ml  chunking.mli  context_window.ml  cost.ml  cost.mli  message_budget.ml  message_budget.mli  pricing.ml  pricing.mli  token_estimate.ml  token_estimate.mli
ocaml/: .gitignore  JAVASCRIPT.md  LICENSE  NORTHSTAR.md  README.md  chatoyant.install  chatoyant.opam  dune-project  package-lock.json  package.json
ocaml/docs/: ADJACENT_USAGE_AUDIT.md  ARCHITECTURE.md  JAVASCRIPT.md  MIGRATION_JS.md  OCAML.md  PARITY.md  PROVIDER_FEATURE_MATRIX.md  PROVIDER_SPECS.md  UNIFIED_ABSTRACTIONS.md
ocaml/js/: chatoyant_internal.ml  chatoyant_js.d.ts  chatoyant_js.ml  dune
ocaml/lib/chatoyant/: chatoyant.ml  chatoyant.mli
ocaml/lib/core/: chat.mli  dune  generator.ml  message.ml  message.mli  options.ml  options.mli  preset.ml  preset.mli  result.ml  result.mli  session.ml  session.mli  shortcuts.ml  shortcuts.mli  stream.ml  stream.mli  tool.ml  tool.mli
ocaml/lib/eio/: chatoyant_native.ml  chatoyant_native.mli  dune
ocaml/lib/ppx/: ppx_chatoyant.ml
ocaml/lib/provider/: anthropic.ml  anthropic.mli  local.ml  local.mli  openai.ml  openai.mli  openai_compatible.ml  openai_compatible.mli  openai_decode.ml  openai_decode.mli  openai_stream.ml  openrouter.ml  openrouter.mli  provider.ml  provider.mli  registry.ml  usage.ml  usage.mli  xai.ml  xai.mli
ocaml/lib/runtime/: effect.ml  effect.mli  json.ml  json.mli  sse.ml  sse.mli
ocaml/lib/schema/: codec.ml  codec.mli  dune  json_schema.ml  json_schema.mli  json_schema_ast.ml  json_schema_ast.mli  json_schema_output.ml  json_schema_output.mli  json_schema_pointer.ml  json_schema_pointer.mli  json_schema_project.ml  json_schema_project.mli  json_schema_regex.ml  json_schema_regex.mli  json_schema_resolver.ml  json_schema_resolver.mli  json_schema_validator.ml  schema.ml  schema.mli  value.ml
ocaml/lib/tokens/: chatoyant_tokens.ml  chatoyant_tokens.mli  chunking.ml  chunking.mli  context_window.ml  context_window.mli  cost.ml  cost.mli  dune  message_budget.ml  message_budget.mli  pricing.ml  pricing.mli  token_estimate.ml  token_estimate.mli
ocaml/scripts/: build-npm.mjs
ocaml/test/: dune  node_adjacent_usage_patterns.mjs  node_anthropic.mjs  node_openai_compatible.mjs  smoke_anthropic_real.ml  smoke_local_real.ml  smoke_openai_real.ml  smoke_openai_tools_eio_real.ml  smoke_openrouter_real.ml  smoke_xai_real.ml  test_anthropic.ml  test_chatoyant_ocaml.ml  test_eio.ml  test_json_schema.ml  test_openai.ml  test_openai_compatible.ml  test_ppx_tool.ml  test_xai.ml
ocaml/test/js/: adjacent-usage-patterns.test.mjs  publish-surface.test.mjs  root-surface.test.mjs  schema-tool.test.mjs
ocaml/test/typed/: usage_patterns.ts
scripts/: brand-docs.mjs  build-npm.mjs  check-doc-links.mjs  check-version-sync.mjs  ensure-json-schema-test-suite.mjs  opam-publish.mjs  release.mjs
src/: index.ts
src/core/: chat.test.ts  chat.ts  index.test.ts  index.ts  message.test.ts  message.ts  options.test.ts  options.ts  presets.test.ts  presets.ts  shortcuts.test.ts  shortcuts.ts  tool.test.ts  tool.ts
src/providers/: detection.test.ts  detection.ts  index.test.ts  index.ts  models.test.ts  models.ts  registry.test.ts  registry.ts  types.test.ts  types.ts
src/schema/: errors.test.ts  errors.ts  (+7 more)
test/: dune  node_adjacent_usage_patterns.mjs  node_anthropic_real.mjs  node_json_schema.mjs  node_json_schema_official_suite.mjs  node_local_real.mjs  node_openai.mjs  node_openai_real.mjs  node_openrouter_real.mjs  node_root_exports.mjs  node_xai.mjs  node_xai_real.mjs  smoke_anthropic_real.ml  smoke_local_real.ml  smoke_openai_real.ml  smoke_openai_tools_eio_real.ml  smoke_openrouter_real.ml  smoke_xai_real.ml  test_anthropic.ml  test_chatoyant_ocaml.ml  test_eio.ml  test_json_schema.ml  test_openai.ml  test_openai_compatible.ml  test_ppx_tool.ml  test_xai.ml
(+133 files in other folders)
